# cognitive-memory

./: .gitignore  CLAUDE.md  README.md  config.default.yaml  pyproject.toml
.claude/blueprints/windows-task-service/: readme.md
.claude/skills/design/: SKILL.md
.claude/skills/dryrun-code/: SKILL.md
.claude/skills/dryrun-design/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/requirement/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/spec/: SKILL.md
.claude/specs/identity-memory/: design.md  dryrun-code-1.md  dryrun-design-1.md  requirement.md  task.md
.claude/specs/memory-cli/: design.md  dryrun-code-1.md  dryrun-design-1.md  dryrun-design-2.md  requirement.md  task.md
.claude/specs/memory-health/: design.md  dryrun-code-1.md  dryrun-design-1.md  dryrun-design-2.md  requirement.md  task.md
.claude/specs/sqlite-lock-fix/: fix.md
.claude/specs/surreal-service/: design.md  dryrun-design-1.md  dryrun-design-2.md  dryrun-design-3.md  requirement.md  task.md
memory-backup/: memory-backup-2026-04-06.db
scripts/: migrate_memories.py  migrate_to_surreal.py
src/cognitive_memory/: __init__.py  classification.py  cli.py  config.py  consolidation.py  decay.py  embeddings.py  engine.py  models.py  protocols.py  retrieval.py  schema.surql  server.py  service.py  storage.py  surreal_storage.py
src/cognitive_memory/migrations/: 001_initial.py
tests/: _mock_server.py  test_cli.py  test_cli_integration.py  test_client.py  test_mcp_client.py  test_memory_health.py
